--- a/views/rubros.ejs
+++ b/views/rubros.ejs
@@ -76,7 +76,7 @@
               </a>
             </article>
             <article class="icon-article">
-              <a href="rubros/Full-Stack-Web-Dev">
+              <a href="rubros/Full Stack Web Dev">
                 <i class=" prueba fas fa-laptop-code"></i>
                 <p class="icon-txt">Full Stack Web Developer</p>
               </a>
@@ -112,13 +112,19 @@
               </a>
             </article>
             <article class="icon-article">
+              <a href="rubros/Contador">
+                <i class="prueba fas fa-search-dollar"></i>
+                <p class="icon-txt">Contaduria</p>
+              </a>
+            </article>
+            <!-- <article class="icon-article">
               <a href="rubros/Jardinero-Deluxe">
                 <i class=" prueba fas fa-cannabis"></i>
                 <p class="icon-txt">Jardineria Deluxe</p>
               </a>
-            </article>
+            </article> -->
             <article class="icon-article">
-              <a href="rubros/Instalador-AC">
+              <a href="rubros/Instalador AC">
                 <i class=" prueba fas fa-wind"></i>
                 <p class="icon-txt">instalacion de AC</p>
               </a>
@@ -136,13 +142,13 @@
               </a>
             </article>
             <article class="icon-article">
-              <a href="rubros/Niñera">
+              <a href="rubros/Cuidado de Menores">
                 <i class=" prueba fas fa-baby"></i>
                 <p class="icon-txt">Cuidado de Menores</p>
               </a>
             </article>
             <article class="icon-article">
-              <a href="rubros/Prof-Particular">
+              <a href="rubros/Prof Particular">
                 <i class=" prueba fas fa-chalkboard-teacher"></i>
                 <p class="icon-txt">Enseñanza Particular</p>
               </a>
