--- a/views/professionals/profPerRubro.ejs
+++ b/views/professionals/profPerRubro.ejs
@@ -78,7 +78,7 @@
         </div>
         <div class="reserved-date">
           <p>
-            <% if(rubro[i].emergency){ %>
+            <% if(rubro[i].emergency=="Si" ){ %>
               <i class="fas fa-shipping-fast"></i>
               Urgencias
               <% } %>
