--- a/views/professionals/professionalDetail.ejs
+++ b/views/professionals/professionalDetail.ejs
@@ -121,7 +121,7 @@
                     <%=" No Posee" %>
                     <% } %>
                 </p>
-                <p>Atiende Emergencias: <% if(profObject[0].emergency){ %>
+                <p>Atiende Emergencias: <% if(profObject[0].emergency=="Si" ){ %>
                     Si
                     <% }else{ %>
                       No
