--- a/views/professionals/registerProf.ejs
+++ b/views/professionals/registerProf.ejs
@@ -149,8 +149,8 @@
           <div class="registerInput expirience-list">
             <label>Atiende Emergencias:
               <select name="emergency">
-                <option value="true" selected>Si</option>
-                <option value="false">No</option>
+                <option value="Si" selected>Si</option>
+                <option value="No">No</option>
               </select>
             </label>
           </div>
