Implementacion de Multer (Avatar),Hashing

--- a/views/professionals/editProf.ejs
+++ b/views/professionals/editProf.ejs
@@ -23,7 +23,7 @@
         <nav class="nav-login">
             <section class="categories">
                 <div class="login">
-                    <a href="../../../rubros">
+                    <a href="/rubros">
                         <p>RUBROS </p>
                     </a>
                 </div>
