--- a/views/professionals/registerProf.ejs
+++ b/views/professionals/registerProf.ejs
@@ -51,7 +51,7 @@
 
     <main>
       <div class="all-registerProf">
-        <form action="/rubros/registerProf" method="POST" class="prof-form">
+        <form action="/rubros/registerProf" method="POST" enctype="multipart/form-data" class="prof-form">
           <div class="registerInput">
             <label for="firstName">Nombre:
               <input type="text" name="firstName" id="firstName" placeholder="Ej: Cosme">
