creacion de registerClients,clientsDetail, falta EeditClient

--- a/views/professionals/profPerRubro.ejs
+++ b/views/professionals/profPerRubro.ejs
@@ -39,6 +39,9 @@
         <a href="/login">
           <p class="txt-ingresar">Ingresar</p>
         </a>
+        <a href="registerClient">
+          <p class="txt-ingresar">Registrate</p>
+        </a>
         <div>
           <p><i class="fas fa-user"></i> <i class="fas fa-chevron-down"></i></p>
 
