--- a/views/users/registerClients.ejs
+++ b/views/users/registerClients.ejs
@@ -20,7 +20,7 @@
     <%- include("../partials/nav-bar") %>
 
       <main>
-        <form action="" method="" class="clientForm">
+        <form action="/clients/registerClients" method="POST" enctype="multipart/form-data" class="clientForm">
           <div class="registerInput">
             <label for="first-name">Nombre:
               <input type="text" name="first-name" id="first-nombre" placeholder="Ej: Cosme">
