--- a/views/partials/nav-bar.ejs
+++ b/views/partials/nav-bar.ejs
@@ -1,7 +1,7 @@
 <nav class="nav-login">
     <section class="categories">
         <div class="login">
-            <a href="rubros">
+            <a href="/rubros">
                 <p>RUBROS </p>
             </a>
         </div>
@@ -11,8 +11,11 @@
         </div>
     </section>
     <div class="login">
-        <a href="login">
+        <a href="/login">
             <p class="txt-ingresar">Ingresar</p>
+        </a>
+        <a href="/clients/registerClients">
+            <p class="txt-ingresar">Registrate</p>
         </a>
         <div>
             <p><i class="fas fa-user"></i> <i class="fas fa-chevron-down"></i></p>
